--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,5 @@
-body{
-    padding: 0;
-    margin: 0;
-    color: black;
-    border: 10px solid green
-}
+/* Tailwing css utility classes */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
